[package]
name = "pomodorust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timer = "0.2.0"
pausable_clock = "0.3.0"
clap = { version = "4.4.8", features = ["cargo", "derive"] }
crossterm = "0.27.0"
